--- a/style.css
+++ b/style.css
@@ -34,22 +34,26 @@ h1 {
 span {
     padding: 0.5rem;
     border-radius: 0.5rem;
-    color: rgb(106, 255, 0);
     position: relative;
 }
 
 .one {
     position: absolute;
     top: 0px;
-    right: -25px;
+    right: -15px;
     height: 35px;
     width: 35px;
-    font-size: 20px;
+    font-size: 35px;
     font-weight: 900;
-    background-color: red;
+    /* background-color: rgb(255, 0, 0); */
     color: white;
     border-radius: 50%;
     display: grid;
     place-items: center;
     line-height: 1  ;
+    opacity: 0;
+}
+
+.null {
+    font-weight: 900;
 }
